# ON-DEM-WG3-Visualization

./: README.md
miscellaneous/: catalystExerciseUsingDocker.sh
miscellaneous/Exercises/Catalyst/: README.md
miscellaneous/Exercises/Catalyst/Simulator/data/: particles.vtpd
miscellaneous/Exercises/Catalyst/Simulator/data/particles/: particles_0.vtu
miscellaneous/Exercises/Catalyst/Simulator/src/: CMakeLists.txt  Catalyst2Adaptor.cxx  InSituAdaptor.h  UtilsConduit.cxx  UtilsConduit.h  catalyst_pipeline.py  custom_catalyst_pipeline.py  main.cxx
